Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -42,6 +42,8 @@
     "Also, in the LiveDataPlayer, the frame number is always visible which helps you checking with the video file if needed.\n",
     "\n",
     "![caption](images/image.png)\n",
+    "\n",
+    "<center>image caption</center>\n",
     "    \n",
     "## About the events:\n",
     "\n",
