Update Live Mouse Tracker Analysis.ipynb
alpha

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -17,20 +17,19 @@
     "   - And then launch \"Jupyter Notebook\".\n",
     "   - Browse to this file on your local computer and then press play. :)\n",
     "   - Here is a cool [video about Jupyter and how to start with it](https://www.youtube.com/watch?v=CwFq3YDU6_Y) to get you a brief sumup of what you can do with it.\n",
+    "   - Once installed, we recommand to bookmark this page in your browser.\n",
     "\n",
     "# Main concepts of Live Mouse Tracker:\n",
     "\n",
-    "## Live Mouse Tracker provides two main output:\n",
-    "\n",
-    "We will here focus on the two main output of LiveMouseTracker:\n",
+    "## Live Mouse Tracker provides two main outputs:\n",
     "\n",
     "- LiveMouseTracker records data in a database. Those files are .sqlite files. They contains \n",
     "    \n",
-    "    - The id of each animal (their RFID number, and also the genotype of mice if you provide them)\n",
-    "    - All the tracking information (detection, tracks, detection mask of animals )\n",
-    "    - All the events (for instance nose-nose events) with a starting and ending frame.\n",
-    "    - Sensor information (temperature, humidity, light, noise level)\n",
-    "    - Third party events (events generated from an Arduino or a custom TTL device)\n",
+    "   - The id of each animal (their RFID number, and also the genotype of mice if you provide them)\n",
+    "   - All the tracking information (detection, tracks, detection mask of animals )\n",
+    "   - All the events (for instance nose-nose events) with a starting and ending frame.\n",
+    "   - Sensor information (temperature, humidity, light, noise level)\n",
+    "   - Third party events (events generated from an Arduino or a custom TTL device)\n",
     "    \n",
     "- Video files, in mp4 format, containing the same view that you had in LiveMouseTracker while performing the record.\n",
     "    \n",
@@ -41,9 +40,10 @@
     "In the video file, the frame number is hard-coded at the bottom of the video so that you can find the exact frame in the video where an event occurs.\n",
     "Also, in the LiveDataPlayer, the frame number is always visible which helps you checking with the video file if needed.\n",
     "\n",
-    "![caption](images/image.png)\n",
-    "\n",
-    "<center>image caption</center>\n",
+    "| ![](images/video.jpg) | \n",
+    "|:--:| \n",
+    "| Example of video output of the tracker with 2 animals. <br>**Top line**: Current date and time, available memory. Second line: temperature, humidity , snd(sound level), light(Visible+IR), light(Visible). <br> **Left side**: view of each animal (oriented verticaly), with RFID number, Z-profile, and rearing, look up and look down info. (black/white): not active, active.) <br>**Bottom line**: t:frame number and equivalent hours/minute/second/frame. Realtime experiment duration (should differ from t if the system has framedrop. Typical drift is half a second for 1 day). CPU time needed for 1 image (here 9ms. Will switch to red if the computer cannot compute a frame), % of CPU used. <br> **Yellow circles**: show each antenna with their respective COM port number, the number of actual RFID reading over the number of read attempt. <br>**Note that we put the house at the bottom-left of the cage, and water is provided though a hole in the wall at the bottom-right of the cage**.\n",
+    "|\n",
     "    \n",
     "## About the events:\n",
     "\n",
@@ -57,25 +57,44 @@
     "## timelines:\n",
     "\n",
     "Explain timelines.\n",
+    "![](images/timelineexample.png)\n",
+    "\n",
     "\n",
     "## Prepare data:\n",
     "\n",
-    "- [Rebuild all events](file.ipynb) \n",
-    "- [Compute sensor data](file.ipynb) \n",
-    "- [Set genotype](file.ipynb) SetGenotype\n",
-    "- [Set night/day for experiment](file.ipynb) ManualNightInput\n",
-    "- [Set night/day for experiment](file.ipynb) A partir des data auto\n",
+    "Live Mouse tracker creates a database with a number of event that are computed live, but most of the events are computed in a post processing. To process them use the [Rebuild all events script](scripts/Rebuild all events.ipynb).\n",
+    "\n",
+    "| ![](images/events.jpg) | \n",
+    "|:--:| \n",
+    "| Events available after post processing |\n",
+    "\n",
+    "A number of analysis script will need the genotype of your animals. Use the [Set genotype](scripts/SetGenotype.ipynb) script to set them.\n",
+    "\n",
+    "Finaly, you can set for each experiment the duration of night. Either \n",
+    "\n",
+    "- [Set night/day for experiment (manually)](scripts/ManualNightInput.ipynb) \n",
+    "\n",
+    "- [Set night/day for experiment (automatic)](scripts/AutoNightInput.ipynb)\n",
     "\n",
     "## Analysis:\n",
     "\n",
+    "\n",
     "- [Show trajectories](file.ipynb) \n",
+    "\n",
     "- [Show heatmap](file.ipynb) \n",
     "\n",
-    "- [Show timelines](file.ipynb) \n",
+    "- [Show timelines](scripts/PlotTimeLineActivityAuto.ipynb) \n",
     "\n",
-    "plotTimeLineActivity.py\n",
+    "- [Build profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipyhb) \n",
     "\n",
-    "- [Build profiles](file.ipynb) \n",
+    "\n",
+    "\n",
+    "## Analysis:\n",
+    "\n",
+    "- [Additional examples](file.ipynb) \n",
+    "\n",
+    "- [Additional interactive examples](file.ipynb) \n",
+    "\n",
     "\n",
     "JPG example d'Elodie\n",
     "\n",
@@ -85,19 +104,10 @@
     "## Additional infos:\n",
     "\n",
     "Video demo and available databases: https://livemousetracker.org/  \n",
-    "LiveMouseTracker paper on [bioRxiv](https://www.biorxiv.org/content/10.1101/345132v2)  \n",
+    "LiveMouseTracker paper on [bioRxiv](https://www.biorxiv.org/content/10.1101/345132v2) or on [Nature BioMedical Engineering](https://www.nature.com/articles/s41551-019-0396-1.epdf?shared_access_token=8wpLBUUytAaGAtXL96vwIdRgN0jAjWel9jnR3ZoTv0MWp3GqbF86Gf14i30j-gtSG2ayVLmU-s57ZbhM2WJjw18inKlRYt31Cg_hLJbPCqlKdjWBImyT1OrH5tewfPqUthmWceoct6RVAL_Vt8H-Og%3D%3D)\n",
     "mail: [chaumont@pasteur.fr, elodie.ey@pasteur.fr](mailto:chaumont@pasteur.fr, elodie.ey@pasteur.fr)  \n",
     "Another [tutorial of the this lib (slide presentation)](https://docs.google.com/presentation /d/1wR7JM2vq5ZjugrwDe4YuuKJm0MWIvkHAvrOH7mQNOEk/edit?usp=sharing)  \n",
     "\n",
-    "How to use run this tutorial with your data:\n",
-    "1. Download or connect a git client to the lmt-analysis repository : https://github.com/fdechaumont/lmt-analysis\n",
-    "2. Download the demo database produced by Live Mouse Tracker: http://bioimageanalysis.org/lmt\n",
-    "3. Install anaconda, and run the jupyter notebook: https://www.anaconda.com/distribution/\n",
-    "4. Point your browser to this file (example/Examples with Jupyter)\n",
-    "/lmt/20180110_validation_4_ind_Experiment_6644.zip\n",
-    "5. Run\n",
-    "6. Select the database you just downloaded when asked.\n",
-    "7. Enjoy the results.\n",
     "\n"
    ]
   },
