Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -42,8 +42,7 @@
     "\n",
     "| ![](images/video.jpg) | \n",
     "|:--:| \n",
-    "| Example of video output of the tracker with 2 animals. <br>**Top line**: Current date and time, available memory. Second line: temperature, humidity , snd(sound level), light(Visible+IR), light(Visible). <br> **Left side**: view of each animal (oriented verticaly), with RFID number, Z-profile, and rearing, look up and look down info. (black/white): not active, active.) <br>**Bottom line**: t:frame number and equivalent hours/minute/second/frame. Realtime experiment duration (should differ from t if the system has framedrop. Typical drift is half a second for 1 day). CPU time needed for 1 image (here 9ms. Will switch to red if the computer cannot compute a frame), % of CPU used. <br> **Yellow circles**: show each antenna with their respective COM port number, the number of actual RFID reading over the number of read attempt. <br>**Note that we put the house at the bottom-left of the cage, and water is provided though a hole in the wall at the bottom-right of the cage**.\n",
-    "|\n",
+    "|Example of video output of the tracker with 2 animals. <br>**Top line**: Current date and time, available memory. Second line: temperature, humidity , snd(sound level), light(Visible+IR), light(Visible). <br> **Left side**: view of each animal (oriented verticaly), with RFID number, Z-profile, and rearing, look up and look down info. (black/white): not active, active.) <br>**Bottom line**: t:frame number and equivalent hours/minute/second/frame. Realtime experiment duration (should differ from t if the system has framedrop. Typical drift is half a second for 1 day). CPU time needed for 1 image (here 9ms. Will switch to red if the computer cannot compute a frame), % of CPU used. <br> **Yellow circles**: show each antenna with their respective COM port number, the number of actual RFID reading over the number of read attempt. <br>**Note that we put the house at the bottom-left of the cage, and water is provided though a hole in the wall at the bottom-right of the cage**.|\n",
     "    \n",
     "## About the events:\n",
     "\n",
@@ -56,7 +55,7 @@
     "\n",
     "## timelines:\n",
     "\n",
-    "Explain timelines.\n",
+    "Explain timelines here\n",
     "![](images/timelineexample.png)\n",
     "\n",
     "\n",
@@ -78,27 +77,23 @@
     "\n",
     "## Analysis:\n",
     "\n",
+    "- [Show sensor data](file.ipynb) \n",
     "\n",
     "- [Show trajectories](file.ipynb) \n",
     "\n",
     "- [Show heatmap](file.ipynb) \n",
     "\n",
-    "- [Show timelines](scripts/PlotTimeLineActivityAuto.ipynb) \n",
+    "- [Show timelines](scripts/PlotTimeLineActivityAutomatic.ipynb) \n",
     "\n",
-    "- [Build profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipyhb) \n",
+    "- [Build profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb) \n",
     "\n",
     "\n",
     "\n",
     "## Analysis:\n",
     "\n",
-    "- [Additional examples](file.ipynb) \n",
+    "- [Additional examples](examples/Examples with Jupyter.ipynb) \n",
     "\n",
-    "- [Additional interactive examples](file.ipynb) \n",
-    "\n",
-    "\n",
-    "JPG example d'Elodie\n",
-    "\n",
-    "nouvel onglet\n",
+    "- [Additional interactive examples](examples/Examples with Jupyter - Interactive query.ipynb) \n",
     "\n",
     "\n",
     "## Additional infos:\n",
@@ -106,7 +101,7 @@
     "Video demo and available databases: https://livemousetracker.org/  \n",
     "LiveMouseTracker paper on [bioRxiv](https://www.biorxiv.org/content/10.1101/345132v2) or on [Nature BioMedical Engineering](https://www.nature.com/articles/s41551-019-0396-1.epdf?shared_access_token=8wpLBUUytAaGAtXL96vwIdRgN0jAjWel9jnR3ZoTv0MWp3GqbF86Gf14i30j-gtSG2ayVLmU-s57ZbhM2WJjw18inKlRYt31Cg_hLJbPCqlKdjWBImyT1OrH5tewfPqUthmWceoct6RVAL_Vt8H-Og%3D%3D)\n",
     "mail: [chaumont@pasteur.fr, elodie.ey@pasteur.fr](mailto:chaumont@pasteur.fr, elodie.ey@pasteur.fr)  \n",
-    "Another [tutorial of the this lib (slide presentation)](https://docs.google.com/presentation /d/1wR7JM2vq5ZjugrwDe4YuuKJm0MWIvkHAvrOH7mQNOEk/edit?usp=sharing)  \n",
+    "Another [tutorial of the this lib (slide presentation)](https://docs.google.com/presentation/d/1wR7JM2vq5ZjugrwDe4YuuKJm0MWIvkHAvrOH7mQNOEk/edit?usp=sharing)  \n",
     "\n",
     "\n"
    ]
