--- a/LMT/scripts/ManualNightInput.ipynb
+++ b/LMT/scripts/ManualNightInput.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,27 +17,18 @@
      "output_type": "stream",
      "text": [
       "Code launched.\n",
-      "Processing file E:/all_data_usv_pairs/20191112_shank3_9187_9518_two_micros_Experiment 643/20191112_shank3_9187_9518_two_micros_Experiment 643.sqlite\n",
+      "Processing file D:/20170925_Shank2_Experiment_8269 processed.sqlite\n",
       "--------------\n",
-      "Current file:  E:/all_data_usv_pairs/20191112_shank3_9187_9518_two_micros_Experiment 643/20191112_shank3_9187_9518_two_micros_Experiment 643.sqlite\n",
+      "Current file:  D:/20170925_Shank2_Experiment_8269 processed.sqlite\n",
       "Loading existing events...\n",
-      "night  Id( None , None , None , None ) Min/maxFrame: ( None / None ) Loaded ( 3  records loaded in  0.145125150680542 S )\n",
+      "night  Id( None , None , None , None ) Min/maxFrame: ( None / None ) Loaded ( 0  records loaded in  1.6934077739715576 S )\n",
       "--------------\n",
       "Event list:\n",
-      "Event\tstart:\t1\tend:\t12\n",
-      "Event\tstart:\t1200\tend:\t2400\n",
-      "Event\tstart:\t3200\tend:\t4800\n",
       "--------------\n",
+      "remove existing nights [Y/N] ? :\n",
+      "Keeping existing nights.\n",
       "Manually add night event:\n",
-      "Start Frame (return to stop):5000\n",
-      "End Frame (return to stop):6000\n",
-      "Number of event:  4\n",
-      "Mean length of event:  953.75\n",
-      "first event frame:  1\n",
-      "Keep previous entry.\n",
-      "Saving timeLine: night ( 4 events )\n",
-      "Manually add night event:\n",
-      "Start Frame (return to stop):\n",
+      "Start Frame (return to stop) : \n",
       "*** ALL JOBS DONE ***\n"
      ]
     }
@@ -53,6 +44,7 @@
     "\n",
     "from tkinter.filedialog import askopenfilename\n",
     "\n",
+    "from lmtanalysis.Util import convert_to_d_h_m_s, getFrameInput\n",
     "import sys\n",
     "\n",
     "from lmtanalysis.FileUtil import getFilesToProcess\n",
@@ -78,10 +70,10 @@
     "    print( \"--------------\")\n",
     "    \n",
     "    answer = input(\"remove existing nights [Y/N] ? :\")\n",
-    "    if answer.lower == \"y\":\n",
+    "    if answer.lower() == \"y\":\n",
     "        print(\"Removing existing nights\")\n",
     "        nightTimeLine.eventList.clear();\n",
-    "        nightTimeLine.endRebuildEventTimeLine(connection)\n",
+    "        nightTimeLine.endRebuildEventTimeLine(connection, deleteExistingEvent = True )\n",
     "    else:\n",
     "        print(\"Keeping existing nights.\")\n",
     "    \n",
@@ -89,16 +81,16 @@
     "    \n",
     "    while True:\n",
     "        print( \"Manually add night event:\")\n",
-    "        startFrame = input( \"Start Frame (return to stop):\" )\n",
-    "        if not startFrame.isdigit():\n",
+    "        startFrame = getFrameInput(\"Start Frame (return to stop)\")\n",
+    "        if startFrame==None:\n",
     "            return\n",
     "        \n",
-    "        endFrame = input( \"End Frame (return to stop):\" )\n",
-    "        if not endFrame.isdigit():\n",
+    "        endFrame = getFrameInput(\"End Frame (return to stop)\")\n",
+    "        if endFrame==None:\n",
     "            return\n",
     "        \n",
     "        nightTimeLine.addEvent( Event( int(startFrame), int(endFrame) ) )\n",
-    "        nightTimeLine.endRebuildEventTimeLine(connection)\n",
+    "        nightTimeLine.endRebuildEventTimeLine(connection, deleteExistingEvent = True )\n",
     "\n",
     "\n",
     "\n",
@@ -120,6 +112,15 @@
     "print( \"*** ALL JOBS DONE ***\")\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
