--- a/LMT/scripts/SetGenotype.ipynb
+++ b/LMT/scripts/SetGenotype.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,18 +19,26 @@
      "output_type": "stream",
      "text": [
       "---------------\n",
-      "Current file:  E:/all_data_usv_pairs/20191112_shank3_9187_9518_two_micros_Experiment 643/20191112_shank3_9187_9518_two_micros_Experiment 643.sqlite\n",
+      "Current file:  D:/20170925_Shank2_Experiment_8269 processed.sqlite\n",
       "Loading animals.\n",
-      "Fields available in lmtanalysis:  ['ID', 'RFID', 'GENOTYPE', 'NAME']\n",
-      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE FROM ANIMAL ORDER BY GENOTYPE\n",
-      "Animal Id:1 Name:A RFID:000004849187 Genotype:SH3 User1:None\n",
-      "Animal Id:2 Name:B RFID:000004849518 Genotype:SH3 User1:None\n",
+      "Fields available in lmtanalysis:  ['ID', 'RFID', 'NAME', 'GENOTYPE', 'IND']\n",
+      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE,IND FROM ANIMAL ORDER BY GENOTYPE\n",
+      "Animal Id:1 Name:A RFID:000004395909 Genotype:KO User1:KO1\n",
+      "Animal Id:4 Name:D RFID:000004395810 Genotype:KO User1:KO2\n",
+      "Animal Id:2 Name:B RFID:000004395685 Genotype:WT User1:WT1\n",
+      "Animal Id:3 Name:C RFID:000004395945 Genotype:WT User1:WT2\n",
       "****\n",
-      "Type new genotype for RFID 000004849187 Current Genotype: SH3 ([Enter] to keep existing one):\n",
-      "keeping genotype SH3\n",
+      "Type new genotype for RFID 000004395909 Current Genotype: KO ([Enter] to keep existing one):\n",
+      "keeping genotype KO\n",
       "****\n",
-      "Type new genotype for RFID 000004849518 Current Genotype: SH3 ([Enter] to keep existing one):S\n",
-      "setting  S  to  000004849518\n",
+      "Type new genotype for RFID 000004395810 Current Genotype: KO ([Enter] to keep existing one):\n",
+      "keeping genotype KO\n",
+      "****\n",
+      "Type new genotype for RFID 000004395685 Current Genotype: WT ([Enter] to keep existing one):\n",
+      "keeping genotype WT\n",
+      "****\n",
+      "Type new genotype for RFID 000004395945 Current Genotype: WT ([Enter] to keep existing one):\n",
+      "keeping genotype WT\n",
       "Genotype saved in database.\n"
      ]
     }
