--- a/LMT/scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb
+++ b/LMT/scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "This file creates the profile output for one animal \n",
     "\n",
-    "I provides several outputs:\n",
-    "    - A figure like this one: ![caption](../images/image.png)\n",
-    "    - A table with..\n",
-    "    \n",
+    "| ![](../images/profile.jpg) | \n",
+    "|:--:| \n",
+    "|Example of profile|\n",
+    "\n",
     "This codes compute the total time spent in each behaviour as well as the total number of occurrences of this behaviour for each individual. You can choose to compute this profile either over all the experiment or for each night separately. It provides a plot for the total duration of all the different events and a plot for the total number of occurrences of each behaviour as pdf files. It also provides a txt file with all individual values for each variable, as well as statistics (mixed model for each trait, uncorrected: trait as a function of genotype, with a group effect).\n",
     "\n"
    ]
