Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -50,13 +50,7 @@
     "\n",
     "- Each event can refer to 4 ids (idA,idB,idC,idD). If you want to grab informations about the oral-genital event between animal 2 and 4, you just need to specify IDs to select those events. Note that Oral-Genital 2,4 will provide a different result than Oral-Genital 4,2 as the event is directed. For symetrical events such as Oral-Oral, (2,4) and (4,2) will provide the same results.\n",
     "\n",
-    "- Quering events without all ids specified:\n",
-    "If you don't provide a given ID, any ID will be used. (explain more here)\n",
-    "\n",
-    "## timelines:\n",
-    "\n",
-    "Explain timelines here\n",
-    "![](images/timelineexample.png)\n",
+    "- More about the events and timelines in the [Interactive query example](examples/Examples with Jupyter - Interactive query.ipynb)\n",
     "\n",
     "\n",
     "## Prepare data:\n",
@@ -77,15 +71,13 @@
     "\n",
     "## Analysis:\n",
     "\n",
-    "- [Show sensor data](file.ipynb) \n",
+    "- [Plot sensor data](scripts/Show Sensor Data.ipynb) \n",
     "\n",
-    "- [Show trajectories](file.ipynb) \n",
+    "- [Plot heatmap](scripts/Plot Heat Map.ipynb) \n",
     "\n",
-    "- [Show heatmap](file.ipynb) \n",
+    "- [Plot timelines](scripts/PlotTimeLineActivityAutomatic.ipynb) \n",
     "\n",
-    "- [Show timelines](scripts/PlotTimeLineActivityAutomatic.ipynb) \n",
-    "\n",
-    "- [Build profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb) \n",
+    "- [Plot identity profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb) \n",
     "\n",
     "\n",
     "\n",
