Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -80,12 +80,19 @@
     "- [Plot identity profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb) \n",
     "\n",
     "\n",
+    "## Water analysis:\n",
     "\n",
-    "## Analysis:\n",
+    "- [Plot cumulated waterpoint](scripts/Cumulated waterpoint.ipynb)\n",
+    "\n",
+    "- [Plot successive water stop](scripts/Compute Successive Water Stop.ipynb)\n",
+    "\n",
+    "\n",
+    "## Additional Analysis:\n",
     "\n",
     "- [Additional examples](examples/Examples with Jupyter.ipynb) \n",
     "\n",
     "- [Additional interactive examples](examples/Examples with Jupyter - Interactive query.ipynb) \n",
+    "\n",
     "\n",
     "\n",
     "## Additional infos:\n",
