Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -80,7 +80,7 @@
     "- [Plot identity profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb) \n",
     "\n",
     "\n",
-    "## Water analysis:\n",
+    "## Analysis on the use of water point:\n",
     "\n",
     "- [Plot cumulated waterpoint](scripts/Cumulated waterpoint.ipynb)\n",
     "\n",
