Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "We detail what the system records, and how to process it. This file also points to a number of scripts that you will use for analysis.\n",
     "\n",
-    "To run this notebook on your computer with Jupyter, proceeed as follow:\n",
+    "To run this notebook on your computer with Jupyter, proceed as follow:\n",
     "\n",
     "   - Download [this python repository](https://github.com/fdechaumont/lmt-analysis) and unzip it in a folder on your computer. (note that Jupyter will only let you browse files starting from your home directory. So place this folder in your documents or on your desktop for instance)\n",
     "   - Install [Anaconda with python v3.x](https://www.anaconda.com/distribution/).\n",
     "   - And then launch \"Jupyter Notebook\".\n",
     "   - Browse to this file on your local computer and then press play. :)\n",
-    "   - Here is a cool [video about Jupyter and how to start with it](https://www.youtube.com/watch?v=CwFq3YDU6_Y) to get you a brief sumup of what you can do with it.\n",
-    "   - Once installed, we recommand to bookmark this page in your browser.\n",
+    "   - Here is a cool [video about Jupyter and how to start with it](https://www.youtube.com/watch?v=CwFq3YDU6_Y) to get a brief overview of what you can do with it.\n",
+    "   - Once installed, we recommend to bookmark this page in your browser.\n",
     "\n",
     "# Main concepts of Live Mouse Tracker:\n",
     "\n",
@@ -25,7 +25,7 @@
     "\n",
     "- LiveMouseTracker records data in a database. Those files are .sqlite files. They contains \n",
     "    \n",
-    "   - The id of each animal (their RFID number, and also the genotype of mice if you provide them)\n",
+    "   - The id of each animal (their RFID number, and also the genotypes of mice if you provide them)\n",
     "   - All the tracking information (detection, tracks, detection mask of animals )\n",
     "   - All the events (for instance nose-nose events) with a starting and ending frame.\n",
     "   - Sensor information (temperature, humidity, light, noise level)\n",
@@ -48,14 +48,14 @@
     "\n",
     "- Events are key in LiveMouseTracker. You will mostly use LMT to check the number of events that occurs during a period, their length, their frequency, how they may be synchronized with other events.\n",
     "\n",
-    "- Each event can refer to 4 ids (idA,idB,idC,idD). If you want to grab informations about the oral-genital event between animal 2 and 4, you just need to specify IDs to select those events. Note that Oral-Genital 2,4 will provide a different result than Oral-Genital 4,2 as the event is directed. For symetrical events such as Oral-Oral, (2,4) and (4,2) will provide the same results.\n",
+    "- Each event can refer to 4 ids (idA,idB,idC,idD). If you want to grab information about the oral-genital event between animal 2 and 4, you just need to specify IDs to select those events. Note that Oral-Genital 2,4 will provide a different result than Oral-Genital 4,2 as the event is directed. For symetrical events such as Oral-Oral, (2,4) and (4,2) will provide the same results.\n",
     "\n",
     "- More about the events and timelines in the [Interactive query example](examples/Examples with Jupyter - Interactive query.ipynb)\n",
     "\n",
     "\n",
     "## Prepare data:\n",
     "\n",
-    "Live Mouse tracker creates a database with a number of event that are computed live, but most of the events are computed in a post processing. To process them use the [Rebuild all events script](scripts/Rebuild all events.ipynb).\n",
+    "Live Mouse tracker creates a database with a number of events that are computed live, but most of the events are computed in a post processing. To process them use the [Rebuild all events script](scripts/Rebuild all events.ipynb).\n",
     "\n",
     "| ![](images/events.jpg) | \n",
     "|:--:| \n",
