--- a/LMT/scripts/Cumulated waterpoint.ipynb
+++ b/LMT/scripts/Cumulated waterpoint.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "This script provide the figure for cumulated water point. (note that you need to build the event \"Water Stop\" to get this graph)\n",
     "\n",
+    "*Warning: we set the waterpoint at the bottom right of the cage. If you use another location, change the code of the rebuildWaterPoint.py file.*\n",
+    "\n",
     "| ![](../images/cumulatedwaterpoint1.jpg) ![](../images/cumulatedwaterpoint2.jpg) ![](../images/cumulatedwaterpoint3.jpg) ![](../images/cumulatedwaterpoint4.jpg)\n",
     "|:--:| \n",
     "|Example of cumulated water point|"
