Update Live Mouse Tracker Analysis.ipynb

--- a/LMT/Live Mouse Tracker Analysis.ipynb
+++ b/LMT/Live Mouse Tracker Analysis.ipynb
@@ -63,28 +63,28 @@
     "\n",
     "A number of analysis script will need the genotype of your animals. Use the [Set genotype](scripts/SetGenotype.ipynb) script to set them.\n",
     "\n",
-    "Finaly, you can set for each experiment the duration of night. Either \n",
+    "Finally, you can set for each experiment the duration of night. Either \n",
     "\n",
     "- [Set night/day for experiment (manually)](scripts/ManualNightInput.ipynb) \n",
     "\n",
-    "- [Set night/day for experiment (automatic)](scripts/AutoNightInput.ipynb)\n",
+    "- [Set night/day for experiment (automatic with light sensor)](scripts/AutoNightInput.ipynb)\n",
     "\n",
     "## Analysis:\n",
     "\n",
     "- [Plot sensor data](scripts/Show Sensor Data.ipynb) \n",
     "\n",
-    "- [Plot heatmap](scripts/Plot Heat Map.ipynb) \n",
+    "- [Plot animal location heatmap](scripts/Plot Heat Map.ipynb) \n",
     "\n",
-    "- [Plot timelines](scripts/PlotTimeLineActivityAutomatic.ipynb) \n",
+    "- [Plot activity timelines](scripts/PlotTimeLineActivityAutomatic.ipynb) \n",
     "\n",
     "- [Plot identity profiles](scripts/ComputeMeasuresIdentityProfileOneMouseAuto.ipynb) \n",
     "\n",
     "\n",
     "## Analysis on the use of water point:\n",
     "\n",
-    "- [Plot cumulated waterpoint](scripts/Cumulated waterpoint.ipynb)\n",
+    "- [Plot cumulated presence at waterpoint](scripts/Cumulated waterpoint.ipynb)\n",
     "\n",
-    "- [Plot successive water stop](scripts/Compute Successive Water Stop.ipynb)\n",
+    "- [Compute successive water stop matrix](scripts/Compute Successive Water Stop.ipynb)\n",
     "\n",
     "\n",
     "## Additional Analysis:\n",
