--- a/LMT/scripts/SetGenotype.ipynb
+++ b/LMT/scripts/SetGenotype.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Set Genotype\n",
     "\n",
-    "This code let you set the genotype of each animals in your databases.\n"
+    "This code lets you set the genotype of each animal in your databases.\n"
    ]
   },
   {
