Update Show Sensor Data.ipynb

--- a/LMT/scripts/Show Sensor Data.ipynb
+++ b/LMT/scripts/Show Sensor Data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Show sensor data\n",
     "\n",
-    "- This script plots the sensor data and save it in pdf figures.\n",
+    "- This script plots the sensor data and saves them it in pdf figures.\n",
     "- Sensor supported : temperature, sound level, humidity, visible light, visible + infrared light.\n",
     "\n",
     "| ![](../images/sensor.jpg) | \n",
