--- a/LMT/scripts/AutoNightInput.ipynb
+++ b/LMT/scripts/AutoNightInput.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Automatic night input\n",
     "\n",
-    "This script let you set the night in the database automatically. It use the light sensor data to compute it.\n",
+    "This script lets you set the night in the database automatically. It uses the light sensor data to compute it.\n",
     "\n",
-    "If first shows the day/night graph and corresponding date/time and ask for confirmation on the value found\n",
+    "If first shows the day/night graph and corresponding date/time and asks for confirmation on the value found.\n",
     "\n",
     "| ![](../images/autonight.jpg) | \n",
     "|:--:| \n",
-    "|Example of graph obtain with autonight. At the beginning of the experiment one can see the high lights while the experiment is starting, then the plateau when lights are on, and the 2nd plateau representing the night, and again on light phase **horizontal red line**:automatic threshold on light value. **pink zone**: dark phases found automatically, **gray zone (surimposed on pink in this example)**: dark phases previously existing in the sequence |"
+    "|Example of graph obtained with autonight. At the beginning of the experiment one can see the high lights while the experiment is starting, then the plateau when lights are on, and the 2nd plateau representing the night, and again on light phase **horizontal red line**:automatic threshold on light value. **pink zone**: dark phases found automatically, **gray zone (surimposed on pink in this example)**: dark phases previously existing in the sequence |"
    ]
   },
   {
