Update Plot Heat Map.ipynb

--- a/LMT/scripts/Plot Heat Map.ipynb
+++ b/LMT/scripts/Plot Heat Map.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Plot heatmap of animal location\n",
     "\n",
-    "- This script plots heatmaps and save it in pdf figures.\n",
+    "- This script plots heatmaps and saves them it in pdf figures.\n",
     "\n",
     "\n",
     "| ![](../images/heatmap.jpg) | \n",
