--- a/LMT/scripts/Cumulated waterpoint.ipynb
+++ b/LMT/scripts/Cumulated waterpoint.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Cumulated WaterPoint\n",
     "\n",
-    "This script provide the figure for cumulated water point. (note that you need to build the event \"Water Stop\" to get this graph)\n",
+    "This script provides the figure for cumulated water point. (note that you need to build the event \"Water Stop\" to get this graph)\n",
     "\n",
     "*Warning: we set the waterpoint at the bottom right of the cage. If you use another location, change the code of the rebuildWaterPoint.py file.*\n",
     "\n",
