Update Compute Successive Water Stop.ipynb

--- a/LMT/scripts/Compute Successive Water Stop.ipynb
+++ b/LMT/scripts/Compute Successive Water Stop.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "| ![](../images/computesuccessivewaterstop.jpg) | \n",
     "|:--:| \n",
-    "|Example of successive matrix. Read \"420397 gets 15 times to the water point after 418228\" |"
+    "|Example of successive matrix. Read \"420397 gets 15 times to the water point after 418228\" |\n"
    ]
   },
   {
