--- a/LMT/scripts/Cumulated waterpoint.ipynb
+++ b/LMT/scripts/Cumulated waterpoint.ipynb
@@ -17,11 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code launched.\n",
+      "Start : 0\n",
+      "Entry (in frame) : 0\n",
+      "End : 1d\n",
+      "Entry (in frame) : 2592000\n",
+      "D:/usv_shank3/20191014_usv_lmt_pair_shank3_4849144_4849294/20191014_usv_lmt_pair_shank3_4849144_4849294.sqlite\n",
+      "4849144_4849294\n",
+      "Loading animals.\n",
+      "Fields available in lmtanalysis:  ['ID', 'RFID', 'GENOTYPE', 'NAME', 'AGE', 'SEX', 'STRAIN']\n",
+      "SQL Query: SELECT ID,RFID,NAME,GENOTYPE,AGE,SEX,STRAIN FROM ANIMAL ORDER BY GENOTYPE\n",
+      "Animal Id:1 Name:A RFID:000004849294 Genotype:KO User1:None\n",
+      "Animal Id:2 Name:B RFID:000004849144 Genotype:KO User1:None\n",
+      "000004849294\n",
+      "Water Stop  Id( 1 , None , None , None ) Min/maxFrame: ( 0 / 2592000 ) Loaded ( 0  records loaded in  1.1093719005584717 S )\n",
+      "000004849144\n",
+      "Water Stop  Id( 2 , None , None , None ) Min/maxFrame: ( 0 / 2592000 ) Loaded ( 0  records loaded in  1.062497854232788 S )\n",
+      "loading night events for file D:/usv_shank3/20191014_usv_lmt_pair_shank3_4849144_4849294/20191014_usv_lmt_pair_shank3_4849144_4849294.sqlite\n",
+      "night  Id( None , None , None , None ) Min/maxFrame: ( 0 / 2592000 ) Loaded ( 1  records loaded in  2.1718909740448 S )\n",
+      "000004849294\n",
+      "000004849144\n",
+      "1440\n",
+      "Saving figure...\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(1, \"../\")\n",
@@ -44,8 +71,7 @@
     "\n",
     "import os\n",
     "from lmtanalysis.FileUtil import getFilesToProcess\n",
-    "from lmtanalysis.Util import convert_to_d_h_m_s, getMinTMaxTInput\n",
-    "\n",
+    "from lmtanalysis.Util import convert_to_d_h_m_s, getMinTMaxTInput,getFrameInput\n",
     "\n",
     "\n",
     "def frameToTimeTicker(x, pos):\n",
@@ -59,8 +85,9 @@
     "    saveFile = \"figTimeLineActivity\"\n",
     "    #Choose the files to process\n",
     "    files = getFilesToProcess()\n",
-    "    tmin, tmax = getMinTMaxTInput()\n",
-    "    \n",
+    "    tmin = getFrameInput(\"Start\")\n",
+    "    tmax = getFrameInput(\"End\")\n",
+    "\n",
     "    for file in files:\n",
     "        print(file)\n",
     "        expName = file[-22:-7]\n",
@@ -139,10 +166,22 @@
     "        for animal in waterPointDuration:    \n",
     "            ax.plot( abs, waterPointDuration[animal] , color= getAnimalColor( animal ))\n",
     "        \n",
-    "        print (\"Saving figure...\")\n",
-    "        fig.savefig( \"FigCumulWaterPoint_{}.pdf\".format( expName ) ,dpi=100)\n",
+    "        \n",
+    "        figName = \"FigCumulWaterPoint_{}.pdf\".format( expName )\n",
+    "        print (\"Saving figure...\" , figName )\n",
+    "        \n",
+    "        fig.savefig( figName ,dpi=100)\n",
     "        plt.close( fig )    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
