--- a/LMT/scripts/ManualNightInput.ipynb
+++ b/LMT/scripts/ManualNightInput.ipynb
@@ -17,15 +17,15 @@
      "output_type": "stream",
      "text": [
       "Code launched.\n",
-      "Processing file D:/20170925_Shank2_Experiment_8269 processed.sqlite\n",
+      "Processing file C:/Users/Fab/Desktop/20180110_validation_2_ind_Experiment_0044_e.sqlite\n",
       "--------------\n",
-      "Current file:  D:/20170925_Shank2_Experiment_8269 processed.sqlite\n",
+      "Current file:  C:/Users/Fab/Desktop/20180110_validation_2_ind_Experiment_0044_e.sqlite\n",
       "Loading existing events...\n",
-      "night  Id( None , None , None , None ) Min/maxFrame: ( None / None ) Loaded ( 0  records loaded in  1.6934077739715576 S )\n",
+      "night  Id( None , None , None , None ) Min/maxFrame: ( None / None ) Loaded ( 0  records loaded in  0.007999658584594727 S )\n",
       "--------------\n",
       "Event list:\n",
       "--------------\n",
-      "remove existing nights [Y/N] ? :\n",
+      "remove existing nights [Y/N] ? :N\n",
       "Keeping existing nights.\n",
       "Manually add night event:\n",
       "Start Frame (return to stop) : \n",
