--- a/LMT/scripts/ManualNightInput.ipynb
+++ b/LMT/scripts/ManualNightInput.ipynb
@@ -17,13 +17,15 @@
      "output_type": "stream",
      "text": [
       "Code launched.\n",
-      "Processing file C:/Users/Fab/Desktop/20180110_validation_2_ind_Experiment_0044_e.sqlite\n",
+      "Processing file C:/Users/Fab/Desktop/Experiment 8466.sqlite\n",
       "--------------\n",
-      "Current file:  C:/Users/Fab/Desktop/20180110_validation_2_ind_Experiment_0044_e.sqlite\n",
+      "Current file:  C:/Users/Fab/Desktop/Experiment 8466.sqlite\n",
       "Loading existing events...\n",
-      "night  Id( None , None , None , None ) Min/maxFrame: ( None / None ) Loaded ( 0  records loaded in  0.007999658584594727 S )\n",
+      "night  Id( None , None , None , None ) Min/maxFrame: ( None / None ) Loaded ( 2  records loaded in  0.1990044116973877 S )\n",
       "--------------\n",
       "Event list:\n",
+      "Event\tstart:\t2398\tend:\t2548\n",
+      "Event\tstart:\t5884\tend:\t245236\n",
       "--------------\n",
       "remove existing nights [Y/N] ? :N\n",
       "Keeping existing nights.\n",
